--- a/My Crazy Night/src/main/res/values/strings.xml
+++ b/My Crazy Night/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">My Crazy Night</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="app_id">1389xxxxxxxx</string>
+    <string name="app_id">1450478265180768</string>
 
 </resources>
