--- a/My Crazy Night/src/main/res/values/strings.xml
+++ b/My Crazy Night/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="app_id">1450478265180768</string>
+    <string name="title_activity_second">SecondActivity</string>
 
 </resources>
